Fixed a minor style issue in which the legend icons in the map were the wrong color.

--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -190,7 +190,6 @@
                 background-color: @main-background;
                 border: @border-color 2px solid;
                 border-radius: 4px;
-                color: @button-color;
 
                 .divider {
                     height: 1px;
@@ -219,6 +218,7 @@
                             }
 
                             .glyphicon {
+                                color: @main-text-color;
                                 position: absolute;
                                 right: 5px;
                                 top: 50%;
